--- a/StatePattern/StatePattern.csproj
+++ b/StatePattern/StatePattern.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Canvas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\EraserTool.cs" />
     <Compile Include="Tools\SelectionTool.cs" />
     <Compile Include="Tools\Interfaces\Tool.cs" />
   </ItemGroup>
